Add a notificatrion and move new certificate from changedList
Signed-off-by: Antoine Cardon <antoine@toinews.net>

--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,8 @@
 		"webRequest",
 		"webRequestBlocking",
 		"storage",
-		"unlimitedStorage"
+		"unlimitedStorage",
+		"notifications"
 	],
 
 	"optional_permissions": [
